1.多环境配置问题

--- a/Demo/src/main/resources/application.yml
+++ b/Demo/src/main/resources/application.yml
@@ -1,12 +1,7 @@
-server:
-  port: 9090
-
+#º§ªÓ≈‰÷√
 spring:
-  datasource:
-    driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@localhost:1521:orcl
-    username: bxfundacc
-    password: bxfundacc
+  profiles:
+    active: dev
 
 
 
