--- a/Demo/src/main/resources/application.yml
+++ b/Demo/src/main/resources/application.yml
@@ -8,6 +8,14 @@ spring:
     username: bxfundacc
     password: bxfundacc
 
+#spring:
+#  datasource:
+#    username: root
+#    password: root
+#    driver-class-name: com.mysql.jdbc.Driver
+#    #driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/forum?characterEncoding=utf8&serverTimezone=UTC
+
 
 
 
