--- a/Demo/src/main/resources/application-dev.yml
+++ b/Demo/src/main/resources/application-dev.yml
@@ -6,4 +6,4 @@ spring:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     url: jdbc:oracle:thin:@localhost:1521:orcl
     username: bxfundacc
-    password: bxfundacc
+    password: 123456
